--- a/file-data-analyzer-api/package.json
+++ b/file-data-analyzer-api/package.json
@@ -12,8 +12,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mammoth": "^1.7.1",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "textract": "^2.5.0"
   }
 }
