API for data masking

--- a/file-data-analyzer-api/package.json
+++ b/file-data-analyzer-api/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.46.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mammoth": "^1.7.1",
     "mongoose": "^8.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "pizzip": "^3.1.6",
     "textract": "^2.5.0"
   }
 }
