--- a/file-data-analyzer-api/.gitignore
+++ b/file-data-analyzer-api/.gitignore
@@ -14,6 +14,12 @@ dist/
 # File Uploads
 uploads/
 
+# File Downloads
+downloads/
+
+# Templates
+templates/
+
 # Testing Documents
 testing_documents/
 
